syntax = "proto3";

package jonline;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "authentication.proto";
import "posts.proto";
import "users.proto";
import "federation.proto";

service Jonline {
  // Get the version (from Cargo) of the Jonline service.
  rpc GetServiceVersion(google.protobuf.Empty) returns (GetServiceVersionResponse) {}
  // Creates a user account and provides an auth token.
  rpc CreateAccount(CreateAccountRequest) returns (LoginResponse) {}
  rpc GetPost(GetPostRequest) returns (Post) {}
}
